# OpenMeasure

./: .gitignore  CONCEPT.md  LICENSE  OpenMeasure.slnx  README.md  SPECIFICATION.md  demo_measurement.meas  mkdocs.yml  todo.md
.github/scripts/: build_bench_report.py
.github/workflows/: auto-release.yml  benchmarks.yml  ci.yml  pages.yml  release.yml
benchmarks/MeasFlow.Benchmarks/: ReadBenchmarks.cs  WriteBenchmarks.cs
benchmarks/OpenMeasure.Benchmarks/: FileSizeBenchmarks.cs  OpenMeasure.Benchmarks.csproj  Program.cs  ReadBenchmarks.cs  WriteBenchmarks.cs
c/: .gitignore  CMakeLists.txt  README.md  measflow.c  measflow.h  vcpkg-configuration.json  vcpkg.json
c/benchmarks/: cross_language.c  format_comparison.c
c/quickstart/: quickstart.c
c/tests/: test_measflow.c
csharp/: MeasFlow.slnx  README.md
csharp/benchmarks/MeasFlow.Benchmarks/: CiRunner.cs  CrossLanguageBenchmarks.cs  FileSizeBenchmarks.cs  FormatComparisonBenchmarks.cs  MeasFlow.Benchmarks.csproj  Program.cs  ReadBenchmarks.cs  WriteBenchmarks.cs
csharp/samples/QuickStart/: Program.cs  QuickStart.csproj  demo_measurement.meas
csharp/src/MeasFlow/: ChannelStatistics.cs  MeasChannel.cs  MeasCompression.cs  MeasDataType.cs  MeasFile.cs  MeasFlow.csproj  MeasReader.cs  MeasTimestamp.cs  MeasWriter.cs
csharp/src/MeasFlow/Bus/: BusChannelDefinition.cs  BusGroupWriter.cs  ByteOrder.cs  E2EProtection.cs  FrameDefinition.cs  MultiplexConfig.cs  SignalDecoder.cs  ValueDescription.cs
csharp/src/MeasFlow/Format/: FileHeader.cs  MetadataEncoder.cs  SegmentCompressor.cs  SegmentHeader.cs
csharp/tests/MeasFlow.Tests/: CanBusTests.cs  CompressionTests.cs  CrossLanguageTests.cs  StreamingTests.cs
csharp/tools/MeasFlow.DemoGenerator/: CrossLanguageReferenceWriter.cs  MeasFlow.DemoGenerator.csproj  Program.cs
csharp/tools/MeasFlow.Viewer/: App.axaml  App.axaml.cs
csharp/tools/MeasFlow.Viewer/Models/: FrameRow.cs  PlotData.cs
csharp/tools/MeasFlow.Viewer/Services/: ChannelDataLoader.cs
docs/: index.html  index.md  resources.md  specification.md  styles.css
docs/api/: c.md  csharp.md  python.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: bus-data.md  file-format.md  streaming.md
python/: pyproject.toml
python/benchmarks/: cross_language.py  format_comparison.py
python/measflow/: __init__.py  _codec.py  reader.py  types.py  writer.py
python/quickstart/: quickstart.py
python/tests/: test_crosslang.py  test_measflow.py
samples/QuickStart/: Program.cs  QuickStart.csproj
site/: 404.html  index.html  sitemap.xml  styles.css
site/api/c/: index.html
site/api/csharp/: index.html
site/api/python/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guide/bus-data/: index.html
site/guide/file-format/: index.html
site/guide/streaming/: index.html
site/resources/: index.html
site/search/: search_index.json
site/specification/: index.html
site/stylesheets/: extra.css
src/MeasFlow/: ChannelStatistics.cs  MeasChannel.cs  MeasDataType.cs  MeasFile.cs  MeasGroup.cs  MeasReader.cs  MeasTimestamp.cs  MeasValue.cs  MeasWriter.cs
src/MeasFlow/Bus/: BusType.cs  PduDefinition.cs  SecOcConfig.cs  SignalDefinition.cs
src/MeasFlow/Format/: BusMetadataEncoder.cs  DataEncoder.cs  MetadataEncoder.cs
src/OpenMeasure/: OmxChannel.cs  OmxDataType.cs  OmxFile.cs  OmxGroup.cs  OmxReader.cs  OmxTimestamp.cs  OmxValue.cs  OmxWriter.cs  OpenMeasure.csproj
src/OpenMeasure/Bus/: BusChannelDefinition.cs  BusGroupWriter.cs  BusType.cs  ByteOrder.cs  E2EProtection.cs  FrameDefinition.cs  MultiplexConfig.cs  PduDefinition.cs  SecOcConfig.cs  SignalDecoder.cs  SignalDefinition.cs  ValueDescription.cs
src/OpenMeasure/Format/: BusMetadataEncoder.cs  DataEncoder.cs  FileHeader.cs  MetadataEncoder.cs  SegmentHeader.cs
tests/MeasFlow.Tests/: BusModelTests.cs  MeasFlow.Tests.csproj  MultiplexTests.cs  RoundtripTests.cs  StreamingTests.cs  TimestampTests.cs
tests/MeasFlow.Tests/TestData/: MeasurementDataGenerator.cs
tests/OpenMeasure.Tests/: BusModelTests.cs  CanBusTests.cs  MultiplexTests.cs  OpenMeasure.Tests.csproj  RoundtripTests.cs  TimestampTests.cs
tests/OpenMeasure.Tests/TestData/: MeasurementDataGenerator.cs
tools/MeasFlow.Viewer/: MeasFlow.Viewer.csproj  Program.cs  app.manifest
tools/MeasFlow.Viewer/Models/: ChannelStatisticsRow.cs  ChannelTreeNode.cs
tools/MeasFlow.Viewer/ViewModels/: MainWindowViewModel.cs
tools/MeasFlow.Viewer/Views/: MainWindow.axaml  MainWindow.axaml.cs
tools/OpenMeasure.Viewer/: App.axaml  App.axaml.cs  OpenMeasure.Viewer.csproj  Program.cs
tools/OpenMeasure.Viewer/Models/: ChannelTreeNode.cs  FrameRow.cs  PlotData.cs
tools/OpenMeasure.Viewer/Services/: ChannelDataLoader.cs
tools/OpenMeasure.Viewer/ViewModels/: MainWindowViewModel.cs
tools/OpenMeasure.Viewer/Views/: MainWindow.axaml  MainWindow.axaml.cs
