[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "measflow"
version = "0.1.0"
description = "Python reader/writer for the MeasFlow (.meas) binary measurement format"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
compression = ["lz4>=4.0", "zstandard>=0.20"]
dev = ["pytest>=7.0", "lz4>=4.0", "zstandard>=0.20"]

[tool.setuptools.packages.find]
include = ["measflow*"]
